--- a/UE/Praxes/ata26092022.md
+++ b/UE/Praxes/ata26092022.md
@@ -1,7 +1,7 @@
 # Ata da reunião 22/09/2022  
 
 ## Dividas  
-> - **Barbara:** 10€
+> - **Bárbara:** 10€
 > - **Bigodes:** 10€
 > - **Miguel Calado:** 20€  
 
@@ -9,41 +9,43 @@
 
 1. Conversa sobre os gastos da semana anterior   
     **Total:** 324.63 €  
-    **Link para detalhes das despesas:** [https://gbarradas.github.io/UE/Praxes/Despesas/](https://gbarradas.github.io/UE/Praxes/Despesas/)  
+    **Link para detalhes das despesas:** https://gbarradas.github.io/UE/Praxes/Despesas/  
 
 2. Conversa sobre o que aconteceu na praxis.  
-    1. À saida de praxis.  
-    1. Confiança dada aos bichos dentro da praxis  
-    1. Bichos que foram abandonados dentro da praxis.  
-3. Decição que não vamos comprar mais pratos de papel devido aos mesmo serem caros.
-4. Compras a partir de hoje cada casa fica responsavel por comprar os alimentos para as suas casas.
-5. Decisão dos dias dos jantares:
-> - 27/09/2022 - Jantar no Rossio.  
->   - Salchichas
+    1. Saída de Praxis.  
+    1. Excesso de confiança dada aos bichos dentro da Praxis.  
+    1. Bichos que foram abandonados dentro da Praxis.  
+3. Ficou decidido que não seriam comprados mais pratos de papel visto que os mesmos são muito caros.
+4. A partir do próximo jantar, cada casa fica responsável pelas suas próprias compras (alimentação), sendo que a refeição é decidida entre todos para não haver diferenças. A bebida continuará a ser comprada pelo Gonçalo Barradas, Guilherme Grilo e André Baião e será distribuída previamente.
+5. Dias para os jantares desta semana:
+> - 27/09/2022 - Jantar no Rossio:
+>   - Pão de forma (já comprado, sobrou do último jantar)  
+>   - Salsichas
 >   - Molhos
 >   - Batatas Fritas 
 >   - Vinho
 >   - Gasosas
->   - Vodka 
+>   - Vodka ou bagaço
+>   - Sacos para o lixo
 > - 28/09/2022 - Jantar em casa:
->   - Salchichas, ou atum.
+>   - Salsichas ou atum.
 >   - Vinho
 >   - Gasosas
->   - Vodka
-6. Distribuição dos Sr. Estudantes por casas.  
+>   - Vodka ou bagaço
+6. Distribuição dos Srs. Estudantes por casas:  
     (Sorteado na reunião)  
 
 |Casa do Helder|Casa da Barbara|Casa do cunha|
 |:------------:|:-------------:|:-----------:|
-|Rodrigo Alves|antonio Nanita|Ze|
-|Andre Baião|Miguel Marques|Cunha|  
+|Rodrigo Alves|Antonio Nanita|Zé|
+|André Baião|Miguel Marques|Cunha|  
 |Rodrigo Bravo|Diogo Mestre|Rui Cidade|
-|Miguel Calado|Barbara loureiro|Gonçalo Barradas|
+|Miguel Calado|Bárbara Loureiro|Gonçalo Barradas|
 |Mariana|Rafael Martins|Pedro Passareiro|
 |Joana Carrasqueira|Guilherme Grilo|João Condeço|
 |Bigodes ???|Diogo Carreiro|Miguel Oliveira|
 
-> Não consideramos a casa da Rita pois não sabemos se ela ainda esta interessada em participar
+> A casa da Rita Raposo não está em consideração devido ao facto da mesma não saber se continuará a marcar presença nas praxes.
 
 <style>
      .red{
